# Hackathon-II-TODO-Spec-The-Evolution-of-Todo

./: .gitignore  Dockerfile  README.md
Phase-II/: .vercelignore  CLAUDE.md  COMPLETE_APP_READY.txt  COMPLETE_WORKING_APP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_CHATBOT.md  DEPLOY_NOW.sh  DEPLOY_TRIGGER.txt  Dockerfile  ENVIRONMENT_SETUP.md  FIX_VERCEL_404.md  HF_SPACE_ENV_VARS.txt  LIVE_DEPLOYMENT_URLS.md  LIVE_FRONTEND_URL.txt  LIVE_URL.txt  NETLIFY_DEPLOYED_URL.txt  PRODUCTION_READY.md  README.md  US1_DELIVERABLES.md  US1_IMPLEMENTATION_COMPLETE.md  US1_QUICK_SUMMARY.txt  VERCEL_FIX_INSTRUCTIONS.md  WORKING_APP_LINK.txt  YOUR_LIVE_APP.md  docker-compose.yaml  netlify.toml  railway.json  railway.toml  (+2 more)
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  inspect_schema.py  pyproject.toml  railway.json  railway.toml  requirements.txt  test_db_connection.py
backend/alembic/: 002_create_message.py
backend/api/: index.py
backend/src/: config.py  main.py
backend/src/api/: auth.py
backend/src/chatbot/: __init__.py
backend/src/chatbot/api/: dependencies.py
backend/src/chatbot/api/routes/: chat.py
backend/src/chatbot/config/: cors.py
backend/src/chatbot/mcp/: validators.py
backend/src/chatbot/mcp/tools/: __init__.py  add_task.py  delete_task.py  list_tasks.py  update_task.py
backend/src/chatbot/models/: conversation.py
backend/src/chatbot/prompts/: system.md
backend/src/chatbot/services/: agent_service.py  conversation_service.py
backend/src/middleware/: auth.py
backend/src/models/: task.py  user.py
(+258 files in other folders)
